# pedalgo

./: .gitignore  Cargo.toml  README.md  index.html
algui/: Cargo.toml
algui/src/: lib.rs
simplex/: Cargo.toml  README.md  index.html
simplex/src/: app.rs  constraint.rs  constraints.rs  error.rs  lib.rs  linear_function.rs  main.rs  point.rs  points.rs  polyhedron.rs  vector.rs
